# eocia-haskell

./: .gitignore  CHANGELOG.md  Makefile  README.md  eocia-haskell.cabal  flake.nix  fourmolu.yaml
app/: Lang.hs  Main.hs
app/Effects/: Lio.hs
output/: runtime.c
src/: Lang.hs  Parser.hs  Pipeline.hs  Pre.hs
src/Effects/: Gensym.hs  Lio.hs
test/: Main.hs
