cabal-version:      3.0
name:               eocia-haskell
version:            0.1.0.0
-- synopsis:
-- description:
homepage:           https://github.com/drdilyor/eocia-haskell
license:            GPL-3.0-only
license-file:       LICENSE
author:             drdilyor
-- maintainer:
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable eocia-haskell
    import:           warnings
    main-is:          Main.hs
    other-modules:    Pre
                    , Lang
    default-extensions: BlockArguments
                      , OverloadedRecordDot
                      , OverloadedRecordUpdate
                      , RecordWildCards
                      , OverloadedStrings
                      , GADTs
                      , TypeFamilies
                      , FlexibleInstances
                      , ViewPatterns
                      , NoImplicitPrelude
    build-depends:    base ^>=4.21.0.0
                    , effectful
                    , text
                    , megaparsec
    hs-source-dirs:   app
    default-language: GHC2024
