cabal-version:      3.0
name:               eocia-haskell
version:            0.1.0.0
-- synopsis:
-- description:
homepage:           https://github.com/drdilyor/eocia-haskell
license:            GPL-3.0-only
license-file:       LICENSE
author:             drdilyor
-- maintainer:
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common common-settings
    ghc-options: -Wall -fplugin=Effectful.Plugin
    default-extensions: BlockArguments
                      , OverloadedRecordDot
                      , RecordWildCards
                      , OverloadedStrings
                      , GADTs
                      , TypeFamilies
                      , FlexibleInstances
                      , ViewPatterns
                      , NoImplicitPrelude
                      , StandaloneDeriving
                      , NoFieldSelectors
                      , RecursiveDo
    build-depends:    base ^>=4.21.0.0
                    , effectful-core
                    , effectful-plugin
                    , effectful-th
                    , text
                    , megaparsec
                    , recursion-schemes
                    , containers
                    , unordered-containers
                    , vector
    default-language: GHC2024

library
    import:           common-settings
    hs-source-dirs:   src
    exposed-modules:  Pre
                    , Lang
                    , Pipeline
                    , Target.Asm
                    , Target.Program
                    , Target.Interp
                    , Effects.Lio
                    , Effects.Gensym

executable eocia-haskell
    import:           common-settings
    main-is:          Main.hs
    hs-source-dirs:   app
    build-depends:    eocia-haskell

test-suite eocia-haskell-test
    import:           common-settings
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    other-modules:    Target.InterpTests
    hs-source-dirs:   test
    build-depends:    eocia-haskell
                    , tasty
                    , tasty-hunit
                    , tasty-quickcheck
